# dionysus

./: .gitignore  BUGS.md  CONTRIBUTING  Cargo.toml  PKGBUILD  README.md
assets/: style.css
crates/dionysus-bin/: Cargo.toml
crates/dionysus-bin/src/: main.rs
crates/dionysus-core/: Cargo.toml
crates/dionysus-core/src/: lib.rs
crates/dionysus-ui/: Cargo.toml
packaging/arch/: PKGBUILD
src/: app.rs  core.rs  ipc.rs  main.rs  ui.rs
src/core/: desktop.rs  freq_store.rs  search_worker.rs
src/core/search_worker/: tests.rs
src/ui/: app_entry_object.rs  build.rs  handle.rs  list_item.rs  list_item_factory.rs  mod.rs  row.rs  window.rs
src/ui/controller/: activation.rs  keyboard.rs  mod.rs  selection.rs  ui_controller.rs  visibility.rs
src/ui/model/: app_entry_object.rs  entries_store.rs  mod.rs
src/ui/view/: list_item.rs  list_item_factory.rs  mod.rs  window.rs
